2010-02-16  Simon Fraser  <simon.fraser@apple.com>

        Build fix for Tiger.

        Add #if USE(ACCELERATED_COMPOSITING) around the call to mediaPlayerRenderingModeChanged().
        
        * platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
        (WebCore::MediaPlayerPrivate::setUpVideoRendering):

2010-02-16  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Eric Carlson.

        Buildfix for r54826.

        HTMLMediaElement class defined by HTMLMediaElement.h in #if ENABLE(VIDEO) block,
        it should be in #if ENABLE(VIDEO) block in rendering/RenderLayerBacking.cpp too.

        * rendering/RenderLayerBacking.cpp: Missing #if ENABLE(VIDEO) guard added.
        (WebCore::RenderLayerBacking::updateGraphicsLayerConfiguration):

2010-02-16  Julie Parent  <jparent@chromium.org>

        Unreviewed: Chromium build fix.

        http://trac.webkit.org/changeset/54823 introduced an unused variable.  Remove it.

        * platform/image-decoders/ImageDecoder.cpp:
        (WebCore::ImageDecoder::create):

2010-02-16  Mark Rowe  <mrowe@apple.com>

        Reviewed by Alexey Proskuryakov.

        Bug 34974: Leak of ScheduledAction during layout tests
        <https://bugs.webkit.org/show_bug.cgi?id=34974>

        ScheduledAction::create was returning a raw pointer which was threaded down through to an OwnPtr in DOMTimer.
        If any of the code paths in between hit an error case and returned early the raw pointer would be leaked.  We
        can avoid this by passing it as a PassOwnPtr.  This will ensure that the ScheduledAction is cleaned up should
        an error case be hit.

        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::setTimeout): Store the newly-created ScheduledAction in an OwnPtr and then hand it off
        as the function argument.
        (WebCore::JSDOMWindow::setInterval): Ditto.
        * bindings/js/JSWorkerContextCustom.cpp:
        (WebCore::JSWorkerContext::setTimeout): Ditto.